--- a/assets/login.html
+++ b/assets/login.html
@@ -23,9 +23,17 @@
         <i class="material-icons margin-lr--10px default">lock</i>
         <input class="light-grey border--black regular long" type="password" id="password" v-model="password">
       </div>
-      <!-- Login button -->
+      <template v-if="incorrectLogin">
+        <h6 style="color: darkred; padding: 0; margin-top: 2px; margin-bottom: 3px; margin-left: 40px; font-size: 11pt;">Credentials not recognised.</h6>
+      </template>
+      <!-- Login button & error message -->
       <div class="flexbox-row margin-tb--10px" style="width: 37.5%; justify-content: flex-end;">
-        <button class="normal red white--text selectable" @click="login">Login</button>
+        <template v-if="username == '' || password == ''">
+          <button class="normal red white--text disabled">Login</button>
+        </template>
+        <template v-else>
+          <button class="normal red white--text selectable" @click="login">Login</button>
+        </template>
       </div>
     </div>
     <!-- Page Scripts -->   
