minor changes + additions

--- a/assets/admin.html
+++ b/assets/admin.html
@@ -193,7 +193,7 @@
           </template>
           <div class="flexbox-row light-grey" style="height: 37%;">
             <strong><h2 style="margin: 5px;">Recent Activity</h2></strong>
-            <img src="img/bottle.png" alt="beer bottle" class="nav-item--push" style="align-self: flex-end; margin-bottom: 0; margin-right: 20px;" width="209px" height="145px">
+            <img src="img/martini.png" alt="beer bottle" class="nav-item--push" style="align-self: flex-end; margin-bottom: 0; top: 25px; margin-right: 20px;" width="125px" height="157px">
           </div>
         </div>
         <div class="file-menu white" style="height: 158px;" v-bind:class="{show: isFileMenuOpen === true}" ref="menuFile">
